--- a/src/views/paginas/cancha.hbs
+++ b/src/views/paginas/cancha.hbs
@@ -35,14 +35,15 @@
             <div class="text-center mb-2">
                 <label for="dias"><b>Dias de Atencion</b></label>
              
-                <label for="dias"><input type="checkbox" name="lunes" value="1">Lunes</label>                
-                <label for="dias"><input type="checkbox" name="martes" value="1">Martes</label>
-                <label for="dias"><input type="checkbox" name="miercoles" value="1">Miercoles</label>
-                <label for="dias"><input type="checkbox" name="jueves" value="1">Jueves</label>
-                <label for="dias"><input type="checkbox" name="viernes" value="1">Viernes</label>
-                <label for="dias"><input type="checkbox" name="sabado" value="1">Sabado</label>
-                <label for="dias"><input type="checkbox" name="domingo" value="1">Domingo</label>        
+                <label for="dias"><input type="checkbox" name="lunes" value="Lunes">Lunes</label>                
+                <label for="dias"><input type="checkbox" name="martes" value="Martes">Martes</label>
+                <label for="dias"><input type="checkbox" name="miercoles" value="Miercoles">Miercoles</label>
+                <label for="dias"><input type="checkbox" name="jueves" value="Jueves">Jueves</label>
+                <label for="dias"><input type="checkbox" name="viernes" value="Viernes">Viernes</label>
+                <label for="dias"><input type="checkbox" name="sabado" value="Sabado">Sabado</label>
+                <label for="dias"><input type="checkbox" name="domingo" value="Domingo">Domingo</label>        
             </div>
+            
             <div class="text-center mb-3">
                 <label for="horario"><b>Horario de Atencion</b></label>
                 <select name="horaDesde" class="btn btn-ls btn-outline-primary" required>
