--- a/src/views/paginas/duenio.hbs
+++ b/src/views/paginas/duenio.hbs
@@ -20,6 +20,7 @@
                                     <th>Dirección</th>
                                     <th>Cuit</th>                                   
                                     <th>Opción</th>
+                                    
                                 </tr>
                             </thead>
                             <tbody>
@@ -29,8 +30,8 @@
                                     </td>
                                     <td><a >{{direccion}}</a></td>
                                     <td><a >{{cuit}}</a></td>
-                                    <td><b><a type="button" class="btn btn-success" href="cancha/{{idEstablecimiento}}">Agregar Cancha</a></b></td>
-                                    
+                                    <td><b><a type="button" class="btn btn-success" href="cancha/{{idEstablecimiento}}">Agregar Cancha</a></b>
+                                    <b><a type="button" class="btn btn-primary" href="cancha/{{idEstablecimiento}}">Mis Canchas</a></b></td>
                                 </tr>
                                 {{/each}}
                             </tbody>
