--- a/src/views/paginas/prueba.hbs
+++ b/src/views/paginas/prueba.hbs
@@ -1,5 +1,2 @@
-<form action="/paginas/prueba/{{user.idUsuarios}}" method="POST" enctype="multipart/form-data">
-    <input type="file" name="imagen">
-    <button type="submit">Cargar</button>
-</form>
-<img src="" alt="" width="300" height="300">
+<div id="demo"></div>
+<div id="demo-timegrid"></div>
