--- a/src/views/partials/barra.hbs
+++ b/src/views/partials/barra.hbs
@@ -80,7 +80,7 @@
 <!--Modal nosotros -->
 <div class="modal fade" id="nosotros" tabindex="-1">
     <div class="modal-dialog modal-lg">
-        <div class="modal-content" style="background-color: rgba(95, 162, 182);">
+        <div class="modal-content" style="background-color: rgb(10, 103, 131);">
             <!-- Modal Header -->
             <div class="modal-header" id="nosotros">
                 <h4 class="modal-title text-white">¿Qué es APPasionados?</h4>
