--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -238,5 +238,15 @@ h6 {
 }
 
 #perfil{
-  background-color: rgb(26, 26, 26);
+  background-color: rgb(92, 143, 163);
+}
+#mensaje {
+  top: 90px;
+  left: 145px;
+  animation: aparecer 2s;
+  position: absolute;
+}
+@keyframes aparecer{
+  0% {opacity: 0;}
+  100% {opacity: 1;}
 }
