--- a/src/views/partials/barra.hbs
+++ b/src/views/partials/barra.hbs
@@ -28,7 +28,7 @@
                 </li>
 
                 <li class="container-fluid">
-                    <a type="button" class="btn btn-primary" href="/paginas/reserva">Reservá ya!</a>
+                    <a type="button" class="btn btn-primary" href="/paginas/reservaDeporte">Reservá ya!</a>
                 </li>
             </ul>
         </div>
