--- a/src/views/paginas/cancha.hbs
+++ b/src/views/paginas/cancha.hbs
@@ -9,8 +9,7 @@
             </div>
             <div class="input-group mt-5 justify-content-around py-2">
                 <label for="numeroCancha"><b>Numero de Cancha</b></label>
-                <input type="number" name="numeroCancha" {{!--class="btn btn-ls btn-outline-primary" --}}
-                    min="{{numero}}" required>
+                <input type="number" name="numeroCancha" class="col-2" min="1" required>
                 <select name="idDeportes" class="btn btn-ls btn-outline-primary" required>
                     <option type="text" value="">Formato</option>
                     <option type="text" value="1">Fútbol 5</option>
