--- a/src/views/reserva/reservaDeporte.hbs
+++ b/src/views/reserva/reservaDeporte.hbs
@@ -1,14 +1,14 @@
-<div class="col-4 mx-auto bg-secondary py-5">
+<div class="col-4 m-0 bg-white py-5">
     
-    <div class="text-white">
-        <h3>Elige deporte</h3>
+    <div class="text-center" disbled>
+        <h3>Elige un Deporte</h3>
         <form action="/paginas/reservaDeporte1/" method="GET">
         <select name="deporte" id="">
             {{#each deporte}}
             <option value="{{idDeportes}}">{{deporte}}</option>
              {{/each}}
         </select>
-        <button type="submit">Aceptar</button>
+        <button type="submit" class="btn btn-success">Aceptar</button>
         </form>
     </div>  
 </div>
