--- a/src/views/partials/barra.hbs
+++ b/src/views/partials/barra.hbs
@@ -92,18 +92,37 @@
                     <div >
                         <h5><p>LLamar a un complejo deportivo e intentar reservar un turno es cosa 
                             del pasado. APPasionados te ofrece un sistema innovador para estar más 
-                            actualizado que nunca. A través de nuestra página, puedes navegar por 
-                            las canchas, ver sus galería de imágenes, turnos disponibles y reservar
+                            actualizado que nunca. A través de nuestra página, puedes crear o ser parte 
+                            de un equipo de tu deporte favorito, navegar por los distintos establecimientos
+                            para ver sus canchas, imágenes, turnos disponibles y reservar
                             rápidamente, sin pérdidas de tiempo.</p> 
                             <p>Ya no es necesario depender de una guía telefónica en tu celular de 
                             todos los complejos deportivos que conoces, se puede prescindir del 
                             teléfono y puedes olvidarte de las interminables llamadas para tratar
                             de conseguir un turno. APPasionados llegó para hacer todo mucho más simple.</p></h5>
                             <h4>¿Por qué usar APPasionados?</h4>
-                        <h5><p>- Reduce el tiempo al alquilar la cancha de tu complejo favorito.</p>
-                            <p>- Fácil de usar, pensada para el usuario.</p>
-                            <p>- Encontrá tu complejo favorito del deporte que quieras.</p>
-                            <p>- Armá tu equipo invitando a tus amigos.</p></h5>
+                        <h5>
+                        <div class="d-flex col-sm-10">
+                            <i class="fas fa-history"></i>
+                            <p> Reduce el tiempo al alquilar la cancha de tu complejo favorito.</p>
+                        </div>
+                        <div class="d-flex col-sm-10">
+                            <i class="far fa-smile-wink"></i>
+                            <p> Fácil de usar, pensada para el usuario.</p>
+                        </div>
+                        <div class="d-flex col-sm-10">
+                            <i class="fas fa-map-marker-alt"></i>
+                            <p> Encontrá tu complejo favorito del deporte que quieras.</p>
+                        </div>
+                        <div class="d-flex col-sm-10">
+                            <i class="fas fa-user-friends"></i>
+                            <p> Armá tu equipo invitando a tus amigos.</p></h5>
+                        </div>
+                            
+                            
+                            
+                            
+                            
                     </div>
                 </div>
             </div>
