--- a/src/views/paginas/jugadores.hbs
+++ b/src/views/paginas/jugadores.hbs
@@ -37,24 +37,24 @@
         <div class="modal-content" style="background-color: rgb(245, 224, 187);">
             <!-- Modal Header -->
             <div class="modal-header" id="miPerfil">
-                <em><h4 class="modal-title text-dark"><u style="color: rgb(59, 59, 59);">Socio Nº {{user.idUsuarios}}</u></h4></em>
+                <em><h4 class="modal-title text-dark"><u style="color: rgb(59, 59, 59);">Socio Nº {{idUsuarios}}</u></h4></em>
                 <button type="button" class="close" data-bs-dismiss="modal" id="crearEquipo">&times;</button>
             </div>
             <!-- Modal body -->
             <div class="modal-body" id="miPerfil">
                 <div id="sello" class="row ">
                     <div class="col-sm-3">
-                       <a href="/paginas/miPerfil/{{user.idUsuarios}}"><img src="/img/descarga/{{user.img}}" alt="" width="125" height="120"></a>
+                       <a href="/paginas/miPerfil/{{idUsuarios}}"><img src="/img/descarga/{{img}}" alt="" width="125" height="120"></a>
                     </div>
                     <div class="col-sm-8">
                         <div class="d-flex">
-                            <pre class="ms-2">Nombre: {{user.nombre}}</pre>
+                            <pre class="ms-2">Nombre: {{nombre}}</pre>
                         </div>
                         <div class="d-flex">
-                            <pre class="ms-2">Apellido: {{user.apellido}}</pre>
+                            <pre class="ms-2">Apellido: {{apellido}}</pre>
                         </div>
                         <div class="d-flex">
-                            <pre class="ms-2">Email: {{user.email}}</pre>
+                            <pre class="ms-2">Email: {{email}}</pre>
                         </div>
                     </div>
                 </div>
