terminando la reserva

--- a/src/views/reserva/reservaDeporte1.hbs
+++ b/src/views/reserva/reservaDeporte1.hbs
@@ -1,7 +1,7 @@
 <div class="col-4 m-0 bg-white py-5">
     <div class="text-center">
         <h3>Establecimientos</h3>
-        <form action="/paginas/reservaDeporte2/" method="GET">
+        <form action="/paginas/reservaDeporte1/{{deporte}}" method="POST">
             <label class="mt-3" for="fecha"><b>Elija un dia</b></label>
             <input type="date" name="fecha" value="" required>
             {{#each canchas}}
