--- a/src/views/reserva/reservaDeporte2.hbs
+++ b/src/views/reserva/reservaDeporte2.hbs
@@ -1,7 +1,7 @@
 <div class="col-4 mx-0 bg-white py-5">
     <div class="text-center">
         <h3>Elige Turno</h3>
-        <form action="/paginas/reservaDeporte3/" method="GET">
+        <form action="/paginas/reservaDeporte2/{{cancha}}&{{fecha}}" method="POST">
             <div class="container">
                 <div class="row row-cols-2">
                     <div id="texto"></div>
