--- a/src/views/paginas/cancha.hbs
+++ b/src/views/paginas/cancha.hbs
@@ -23,13 +23,13 @@
             </div>
             <div class="text-center mb-2">
                 <label for="dias"><b>Dias de Atencion</b></label>
-                <label for="dias"><input type="checkbox" name="Lunes" value="1">Lunes</label>
-                <label for="dias"><input type="checkbox" name="Martes" value="2">Martes</label>
-                <label for="dias"><input type="checkbox" name="Miercoles" value="3">Miercoles</label>
-                <label for="dias"><input type="checkbox" name="Jueves" value="4">Jueves</label>
-                <label for="dias"><input type="checkbox" name="Viernes" value="5">Viernes</label>
-                <label for="dias"><input type="checkbox" name="Sabado" value="6">Sabado</label>
-                <label for="dias"><input type="checkbox" name="Domingo" value="0">Domingo</label>
+                <label for="dias"><input type="checkbox" name="dia[]" value=1>Lunes</label>
+                <label for="dias"><input type="checkbox" name="dia[]" value=2>Martes</label>
+                <label for="dias"><input type="checkbox" name="dia[]" value=3>Miercoles</label>
+                <label for="dias"><input type="checkbox" name="dia[]" value=4>Jueves</label>
+                <label for="dias"><input type="checkbox" name="dia[]" value=5>Viernes</label>
+                <label for="dias"><input type="checkbox" name="dia[]" value=6>Sabado</label>
+                <label for="dias"><input type="checkbox" name="dia[]" value=0>Domingo</label>
             </div>
             <div class="text-center mb-3">
                 <label for="horario"><b>Horario de Atencion</b></label>
