pantalla cancha y establecimiento responsive

--- a/src/views/ingreso/registroDuenio.hbs
+++ b/src/views/ingreso/registroDuenio.hbs
@@ -18,7 +18,7 @@
                             </div>
                              <div class="input-group mb-3">          
                                 <b><span style="color: red;">*  </span></b>                      
-                                <input type="cuit" class="form-control" name="nombreEstablecimiento" placeholder="Nombre" required>
+                                <input type="cuit" class="form-control" name="nombreEstablecimiento" placeholder="Nombre del establecimiento" required>
                             </div>
                              <div class="input-group mb-3">          
                                 <b><span style="color: red;">*  </span></b>                      
