--- a/src/views/paginas/establecimiento.hbs
+++ b/src/views/paginas/establecimiento.hbs
@@ -1,8 +1,8 @@
 <div id="cancha">
-    <div class="col-md-6 mx-auto p-2">
-        <form id="formCancha">
+    <div class="col-md-6 mx-auto p-5">
+        <form id="semiTransparente">
             <div class="text-center mb-4 p-2">
-                <h2>Nuevo Establecimiento</h2>
+                <h2 class="text-white">Nuevo Establecimiento</h2>
             </div>
             <div class="input-group mb-3 px-3">
                 <input type="text" class="form-control" id="validationDefault01"
@@ -15,7 +15,7 @@
                 <input type="number" class="form-control" id="validationDefault02" placeholder="CUIT" required>
             </div>
             <div class="mb-3 text-center">
-                <label for="formFile"><b>Logo (opcional)</b></label>
+                <label for="formFile" class="text-white"><b>Logo (opcional)</b></label>
                 <input class="form-control" type="file" id="formFile">
             </div>
             <div class="col-md-6 mx-auto pb-3">
