--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -119,23 +119,12 @@ h6, h5{
 }
 #cancha {
   background-image: url(../img/app/duenio.jpg);
-  background-position: center center;
+  background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  background-attachment: fixed;
-  width: 100%;
-   height: 555px 
+  background-attachment: fixed
 }
-#formCancha{
-  background: rgba(255, 254, 254, 0.61);
-  /* padding:2px 0 10px 0 ;
-   cursor:pointer;
-   display:block; */
-   /* width:400px; */
-   /* margin: 0 auto; */
-   /* margin-left: auto;
-  margin-right: auto; */
-}
+
 #modalCancha-header{
   color:black;
   text-align: center
@@ -190,10 +179,6 @@ h6, h5{
 
 #semiTransparente{
   background: rgba(41, 41, 41, 0.575);
-}
-
-#titDuenio{
-  color: blanchedalmond;
 }
 
 #volver {
