--- a/src/views/paginas/duenio.hbs
+++ b/src/views/paginas/duenio.hbs
@@ -30,7 +30,7 @@
                                 <td><a >{{cuit}}</a></td>
                                 <td><b><a class="link link-success" href="cancha/{{idEstablecimiento}}">Agregar Cancha</a></b>
                                 <br>
-                                <b><a class="link link-primary" href="cancha/{{idEstablecimiento}}">Mis Canchas</a></b></td>
+                                <b><a class="link link-primary" href="misCanchas/{{idEstablecimiento}}">Mis Canchas</a></b></td>
                             </tr>
                             {{/each}}
                         </tbody>
