--- a/src/views/paginas/cancha.hbs
+++ b/src/views/paginas/cancha.hbs
@@ -1,10 +1,10 @@
 <div id="cancha">
-    <div class="col-md-4 mx-auto py-3" id="formCancha">
+    <div class="col-md-4 mx-auto py-3" id="semiTransparente">
         <form action="/paginas/cancha/{{idEstablecimiento}}" method="POST">
-            <div class="text-center">
+            <div class="text-center text-white">
                 <h2>Nueva Cancha</h2>
             </div>
-            <div class="text-center">
+            <div class="text-center text-white">
                 <h2>{{datosEstablecimiento.nombreEstablecimiento}}</h2>
             </div>
             <div class="input-group mt-5 justify-content-around py-2">
