--- a/src/views/reserva/reservaDeporte1.hbs
+++ b/src/views/reserva/reservaDeporte1.hbs
@@ -12,7 +12,7 @@
             <div class="col-md-6 bg-info mb-3">
                 <b> {{nombreEstablecimiento}} <br>
                 numero de la cancha {{numeroCancha}}
-                <input type="radio" name="idCancha" value="{{id}}">
+                <input type="radio" name="idCancha" value="{{id}}" required>
             </div>
             {{/each}}
 
