--- a/src/views/paginas/duenio.hbs
+++ b/src/views/paginas/duenio.hbs
@@ -10,6 +10,13 @@
                             <li><a class="dropdown-item" href="establecimiento">Agregar Establecimiento</a></li>
                         </ul>
                     </a>
+                     <a class="navbar-brand">
+                        <a class="btn btn-dark btn-lg dropdown-toggle text-white" href="#" id="dropdown04"
+                            data-bs-toggle="dropdown" aria-expanded="false">RESERVAS</a>
+                        <ul class="dropdown-menu" aria-labelledby="dropdown04">
+                            <li><a class="dropdown-item" href="establecimiento">Ver Reservas</a></li>
+                        </ul>
+                    </a>
                 </div>
                 <div id="scroll">
                     <table class="table table-hover table-info">
