--- a/src/views/partials/barra.hbs
+++ b/src/views/partials/barra.hbs
@@ -1,4 +1,7 @@
+
+
 {{#if user}}
+
 <nav class="navbar navbar-expand-md navbar-dark bg-dark">
     <div class="container-fluid">
         <a class="navbar-brand" href="/paginas/inicio">
@@ -25,6 +28,10 @@
                 <li class="container-fluid">
                     <a type="link" class="nav-link" href="#" aria-disabled="true" data-bs-toggle="modal"
                 data-bs-target="#nosotros" aria-controls="offcanvasRight">Nosotros</a>
+                </li>
+                  <li class="container-fluid">
+                    <a type="link" id="accesoDuenio" class="nav-link" href="/paginas/duenio" aria-disabled="true"
+                 aria-controls="offcanvasRight">Cancha</a>
                 </li>
 
                 <li class="container-fluid">
@@ -117,12 +124,7 @@
                         <div class="d-flex col-sm-10">
                             <i class="fas fa-user-friends"></i>
                             <p> Armá tu equipo invitando a tus amigos.</p></h5>
-                        </div>
-                            
-                            
-                            
-                            
-                            
+                        </div>                  
                     </div>
                 </div>
             </div>
@@ -130,3 +132,12 @@
     </div>
 </div>
 {{/if}}
+<script> 
+    var estado 
+    if ({{user.idRol}} === 2) {
+     estado= "block"
+     }else{
+     estado= "none"}
+
+document.getElementById('accesoDuenio').style.display= estado
+</script>
