--- a/src/views/reserva/reservaDeporte2.hbs
+++ b/src/views/reserva/reservaDeporte2.hbs
@@ -1,11 +1,11 @@
 <div class="col-4 mx-0 bg-white py-5">
     <div class="text-center">
         <h3>Elige Turno</h3>
-        <a id="botonTurnos" href="#" onclick="return misTurnos({{turno.horaInicio}}, {{turno.horaFin}})">Ver Turnos</a>
+        <button class="btn btn-warning mb-3" id="botonTurnos" onclick="return misTurnos({{turno.horaInicio}}, {{turno.horaFin}})">Ver Turnos</button>
         <form action="/paginas/reservaDeporte2/{{idCancha}}&{{fecha}}" method="POST">
             <div class="container">
-                <div class="row row-cols-2">
-                    <div id="texto"></div>
+                <div  id="texto" class="row justify-content-around">
+                
                 </div>
             </div>
             <button type="submit" class="btn btn-success text-dark">Reservar</button>
@@ -16,7 +16,7 @@
 <script type="text/javascript">
     function misTurnos(a, b) {
         for (var i = a; i <= b; i++) {
-            document.getElementById("texto").innerHTML += `<div class="col mb-3 bg-primary"><input type="radio" name="turno" id="" value="${i}"> Turno ${i} Hora</div>`;
+            document.getElementById("texto").innerHTML += `<div class="col-4 mb-3 m-2 bg-primary"><input type="radio" name="turno" id="" value="${i}" required> ${i} Hs</div>`;
         }
     }
     var btnTurnos = document.getElementById("botonTurnos");
