--- a/src/views/partials/barra.hbs
+++ b/src/views/partials/barra.hbs
@@ -33,6 +33,10 @@
                     <a type="link" id="accesoDuenio" class="nav-link" href="/paginas/duenio" aria-disabled="true"
                  aria-controls="offcanvasRight">Cancha</a>
                 </li>
+                  <li class="container-fluid">
+                    <a type="link" id="accesoDuenio" class="nav-link" href="/paginas/reservaUsuario/{{user.idUsuarios}}" aria-disabled="true"
+                 aria-controls="offcanvasRight">Mis Reservas</a>
+                </li>
 
                 <li class="container-fluid">
                     <a type="button" class="btn btn-primary" href="/paginas/reservaDeporte">Reservá ya!</a>
