--- a/src/views/partials/barra.hbs
+++ b/src/views/partials/barra.hbs
@@ -30,11 +30,10 @@
                 data-bs-target="#nosotros" aria-controls="offcanvasRight">Nosotros</a>
                 </li>
                   <li class="container-fluid">
-                    <a type="link" id="accesoDuenio" class="nav-link" href="/paginas/duenio" aria-disabled="true"
-                 aria-controls="offcanvasRight">Cancha</a>
+                    <a type="link" id="accesoDuenio" class="nav-link" href="/paginas/duenio" aria-disabled="true" style="display: none;" aria-controls="offcanvasRight">Cancha</a>
                 </li>
                   <li class="container-fluid">
-                    <a type="link" id="accesoDuenio" class="nav-link" href="/paginas/reservaUsuario/{{user.idUsuarios}}" aria-disabled="true"
+                    <a type="link" class="nav-link" href="/paginas/reservaUsuario/{{user.idUsuarios}}" aria-disabled="true"
                  aria-controls="offcanvasRight">Mis Reservas</a>
                 </li>
 
