--- a/src/views/ingreso/registroDuenio.hbs
+++ b/src/views/ingreso/registroDuenio.hbs
@@ -14,15 +14,15 @@
                         <form action="/registroDuenio" method="post">                        
                             <div class="input-group mb-3">          
                                 <b><span style="color: red;">*  </span></b>                      
-                                <input type="number" class="form-control" name="cuit" placeholder="Ingrese su Cuit sin guiones" required>
+                                <input type="number" class="form-control" name="cuit" placeholder="Ingrese su Cuit sin guiones" pattern="[0,9]{11}" required>
                             </div>
                              <div class="input-group mb-3">          
                                 <b><span style="color: red;">*  </span></b>                      
-                                <input type="cuit" class="form-control" name="nombreEstablecimiento" placeholder="Nombre del establecimiento" required>
+                                <input type="text" class="form-control" name="nombreEstablecimiento" placeholder="Nombre del establecimiento" required>
                             </div>
                              <div class="input-group mb-3">          
                                 <b><span style="color: red;">*  </span></b>                      
-                                <input type="cuit" class="form-control" name="direccion" placeholder="Direccion" required>
+                                <input type="text" class="form-control" name="direccion" placeholder="Direccion" required>
                             </div>                             
                             <b><span style="color: red;"><b>*</b></span><span style="font-size:small"> CAMPOS OBLIGATORIOS</span></b>                          
                             <div class="d-grid mb-2">
