--- a/src/views/paginas/cancha.hbs
+++ b/src/views/paginas/cancha.hbs
@@ -1,39 +1,39 @@
-<div id="cancha">
-    <div class="col-md-4 mx-auto py-3" id="semiTransparente">
-        <form action="/paginas/cancha/{{idEstablecimiento}}" method="POST">
+<div id="cancha" class="p-3">
+    <div class="col-md-4 mx-auto p-3" id="semiTransparente">
+        <form action="/paginas/cancha/{{idEstablecimiento}}" method="POST" enctype="multipart/form-data">
             <div class="text-center text-white">
                 <h2>Nueva Cancha</h2>
             </div>
             <div class="text-center text-white">
                 <h2>{{datosEstablecimiento.nombreEstablecimiento}}</h2>
             </div>
-            <div class="input-group mt-5 justify-content-around py-2">
-                <label for="numeroCancha"><b>Numero de Cancha</b></label>
-                <input type="number" name="numeroCancha" class="col-2" min="1" required>
+            <div class="container mt-4 py-2 text-white">
+                <label for="numeroCancha">Numero de Cancha<span style="color: red;"> *</span></label>
+                <input type="number" name="numeroCancha" class="col-2 m-2" min="1" required>
                 <select name="idDeportes" class="btn btn-ls btn-outline-primary" required>
-                    <option type="text" value="">Formato</option>
-                    <option type="text" value="1">Fútbol 5</option>
-                    <option type="text" value="2">Fútbol 7</option>
-                    <option type="text" value="3">Fútbol 11</option>
-                    <option type="text" value="4">Básquet 2</option>
-                    <option type="text" value="5">Básquet 5</option>
-                    <option type="text" value="6">Pádel 1</option>
-                    <option type="text" value="7">Pádel 2</option>
+                    <option type="number" value="">Formato</option>
+                    <option type="number" value=1>Fútbol 5</option>
+                    <option type="number" value=2>Fútbol 7</option>
+                    <option type="number" value=3>Fútbol 11</option>
+                    <option type="number" value=4>Básquet </option>
+                    <option type="number" value=5>Pádel </option>
+                 
                 </select>
             </div>
-            <div class="text-center mb-2">
-                <label for="dias"><b>Dias de Atencion</b></label>
-                <label for="dias"><input type="checkbox" name="dia[]" value=1>Lunes</label>
-                <label for="dias"><input type="checkbox" name="dia[]" value=2>Martes</label>
-                <label for="dias"><input type="checkbox" name="dia[]" value=3>Miercoles</label>
-                <label for="dias"><input type="checkbox" name="dia[]" value=4>Jueves</label>
-                <label for="dias"><input type="checkbox" name="dia[]" value=5>Viernes</label>
-                <label for="dias"><input type="checkbox" name="dia[]" value=6>Sabado</label>
-                <label for="dias"><input type="checkbox" name="dia[]" value=0>Domingo</label>
+            <div class="text-white mb-2">
+                <label for="dias">Dias de Atencion <span style="color: red;">* </span></label><br>
+                <div class="container justify-content-around">
+                    <label for="dias"><input type="checkbox" name="dia[]" value=1> Lunes</label>
+                    <label for="dias"><input type="checkbox" name="dia[]" value=2> Martes</label>
+                    <label for="dias"><input type="checkbox" name="dia[]" value=3> Miercoles</label>
+                    <label for="dias"><input type="checkbox" name="dia[]" value=4> Jueves</label>
+                    <label for="dias"><input type="checkbox" name="dia[]" value=5> Viernes</label>
+                    <label for="dias"><input type="checkbox" name="dia[]" value=6> Sabado</label>
+                    <label for="dias"><input type="checkbox" name="dia[]" value=0> Domingo</label>
+                </div>
             </div>
-            
-            <div class="text-center mb-3">
-                <label for="horario"><b>Horario de Atencion</b></label>
+            <div class="text-center text-white mb-3">
+                <label for="horario">Horario de Atencion <span style="color: red;"> * </span></label>
                 <select name="horaInicio" class="btn btn-ls btn-outline-primary" required>
                     <option>Desde</option>
                     <option value="1" type="number">1</option>
@@ -89,6 +89,9 @@
                     <option value="24" type="number">24</option>
                 </select><span class="m-1"><b>Hs</b></span>
             </div>
+            <div class="">
+                <label for="imagen"><span style="color: red;"> * </span><input type="file" name="imagen" id="imagen" required></label>
+            </div>
             <div class="col-5 mx-auto">
                 <button type="submit" class="btn btn-success btn-block">
                     Cargar
@@ -98,5 +101,7 @@
             Cancelar
         </a>
     </div>
-</div>
+    <div class="text-white p-3">
+        * Datos Obligatorios para mejor experiencia de usuario. Gracias!
+    </div>
 </div>
