--- a/src/views/paginas/miPerfil.hbs
+++ b/src/views/paginas/miPerfil.hbs
@@ -30,4 +30,7 @@
             </div>
         </div>
     </form>
+    <div style = "float: left" class="col-2  p-4">
+        <a id="volver" href="javascript: history.go(-1)" type="button" class="btn btn-danger">Volver</a>
+    </div>
 </div>
