--- a/src/views/paginas/verCancha.hbs
+++ b/src/views/paginas/verCancha.hbs
@@ -1,5 +1,6 @@
-<div id="cancha" class="container">
-    <form id="semiTransparente" class="col-md-5 m-auto p-4" >
+<div id="cancha">
+    <div class="container p-5">
+    <div id="semiTransparente" class="col-md-5 m-auto p-5" >
         <div class="col-md-12">
             <div class="card-header">
                 <div class="text-center"><h2>Pase a la red</h2></div>
@@ -11,10 +12,10 @@
                 <i type="text">Deporte: <b>Fútbol 5</b></i>
             </div>
         </div>
-        <div class="col-md-12">
-            <a id="volver" href="/paginas/futbol" type="button" class="btn btn-danger">Volver</a>
-        </div>
-    </form>
+    </div>
+    <div style = "float: left" class="col-2  p-4">
+        <a id="volver" href="javascript: history.go(-1)" type="button" class="btn btn-danger">Volver</a>
+    </div>
     
 </div>    
 
