--- a/src/views/paginas/vistaAdmin.hbs
+++ b/src/views/paginas/vistaAdmin.hbs
@@ -18,8 +18,7 @@
     }
 
 </script>
-
-<div>
+<div class="container">
     <div class="btn-group mb-3">
         <button class="btn btn-outline-info" onclick="mostrar(2,1)" ondblclick="mostrar(2,0)">
             <h4><b>CANCHAS</b></h4>
@@ -106,10 +105,7 @@
             </table>
         </div>
     </div>
-    <form action="vistaAdmin" method="POST">
-        <input name="fecha" type="date">
-        <input name="hora" type="datetime">
-        <button type="submit">Aceptar</button>
-    </form>
-
 </div>
+<div style = "float: left" class="col-2  p-4">
+        <a id="volver" href="javascript: history.go(-1)" type="button" class="btn btn-danger">Volver</a>
+    </div>
