--- a/src/views/reserva/reservaDeporte1.hbs
+++ b/src/views/reserva/reservaDeporte1.hbs
@@ -25,14 +25,17 @@
         </div>
         <div class="col">
             <div class="row justify-content-around">
-            {{#each canchas}}
-            <div class="col m-3 bg-info">
-            <img src="/img/descarga/{{img}}" alt="" width="150" height="150">       
-             <b> {{nombreEstablecimiento}} 
-             numero de la cancha {{numeroCancha}}           
-            </div>
-            {{/each}}
+                {{#each canchas}}
+                <div class="col m-3 bg-info">
+                    <img src="/img/descarga/{{img}}" alt="" width="150" height="150">
+                    <b> {{nombreEstablecimiento}}
+                        numero de la cancha {{numeroCancha}}
+                </div>
+                {{/each}}
             </div>
         </div>
     </div>
+</div>
+<div style="float: left" class="col-2  p-4">
+    <a id="volver" href="javascript: history.go(-1)" type="button" class="btn btn-danger">Volver</a>
 </div>
